--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body{
 #progressBar{
     width: 100%;
     height: 10px;
-    background-color: var(--teal);
+    background-color: var(--secondaryBackground);
     border-radius: 5px;
     margin-top: 20px;
     display: flex;
@@ -55,6 +55,7 @@ body{
     background-color: var(--teal);
     border-radius: 10px;
     transition: all 0.3s ease;
+    
 }
 #numbers{
     width: 100px;
